--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/all.css">
+    <script src="js/public.js"></script>
 </head>
 <body>
 <h3>知识改变命运</h3>
